--- a/Proyecto_001/.classpath
+++ b/Proyecto_001/.classpath
@@ -6,22 +6,22 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/gluegen.jar" sourcepath="lib/gluegen-java-src.zip">
+	<classpathentry kind="lib" path="jars/gluegen-rt.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/gluegen-rt-natives-windows-amd64.jar">
+	<classpathentry kind="lib" path="jars/gluegen-rt-natives-windows-amd64.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jogl-all.jar" sourcepath="lib/jogl-java-src.zip">
+	<classpathentry kind="lib" path="jars/jogl-all.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jogl-all-natives-windows-amd64.jar">
+	<classpathentry kind="lib" path="jars/jogl-all-natives-windows-amd64.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
